2004-10-05  Derek Price  <derek@ximbiot.com>

	* dirname.m4, dos.m4: Updated from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add gnulib.m4.
	* gnulib.m4: New file.
	* xalloc.m4: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new and previously missing files.
	* eoverflow.m4, intmax.m4, printf-posix.m4: New files from GNULIB.
	* gettext.m4, glibc21.m4, intmax_t.m4, inttypes_h.m4, lib-ld.m4,
	lib-link.m4, lib-prefix.m4, longlong.m4, po.m4, stdint_h.m4,
	uintmax_t.m4, ulonglong.m4, vasnprintf.m4: Import most recent versions
	from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* save-cwd.m4: New file from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* alloca.m4: Import latest version from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* unlocked-io.m4: Import most recent version from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* regex.m4: Import most recent version from GNULIB.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add strftime.m4.
	* strftime.m4: New file.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add tzset.m4.

2004-05-14  Derek Price  <derek@ximbiot.com>

	* gettime.m4: Updated from GNULIB.

2004-05-03  Derek Price  <derek@ximbiot.com>

	* bison.m4: Declare YACC & YFLAGS as precious vars.

2004-05-03  Derek Price  <derek@ximbiot.com>

	* bison.m4: Use AM_MISSING_PROG rather than a set/subst combination.

2004-05-02  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add strerror.m4 & strerror_r.m4.
	* strerror_r.m4: New file.
	* Makefile.in: Regenerated.

2004-04-28  Derek Price  <derek@ximbiot.com>

	* unlocked-io.m4: Update to most recent version from GNULIB.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new files.
	* bison.m4, tm_gmtoff.m4, getdate.m4: New files.
	* Makefile.in: Regenerated.
