@@ -7,8 +7,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
 
 AC_DEFUN([gl_EARLY],
 [
@@ -24,6 +24,8 @@ AC_DEFUN([gl_INIT],
   gl_DIRNAME
   gl_EXITFAIL
   dnl gl_USE_SYSTEM_EXTENSIONS must be added quite early to configure.ac.
+  # No macro. You should also use one of fnmatch-posix or fnmatch-gnu.
+  gl_FUNC_FNMATCH_POSIX
   dnl you must add AM_GNU_GETTEXT([external]) or similar to configure.ac.
   gl_PATHMAX
   gl_REGEX
